Added working group-info page Almost complete subject page Logout/username works on all added pages Linked all added pages

--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -15,7 +15,7 @@
                     <ul>
                         <li class="nav-op"><a>SUBJECT</a>
                             <ul>
-                                <li><a>SUBJECT 1</a></li>
+                                <li><a href="../Subject Page/subject-page.html">UE18CS205</a></li>
                                 <li><a>SUBJECT 2</a></li>
                                 <li><a>SUBJECT 3</a></li>
                                 <li><a>SUBJECT 4</a></li>
@@ -25,7 +25,7 @@
                         <li class="nav-op"><a>ACTIVITY</a>
                             <ul>
                                 <li><a>CALENDAR</a></li>
-                                <li><a>GROUP INFO</a></li>
+                                <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
                                 <li><a>MY ACTIVITY</a></li>
                             </ul>
                         </li>
