css improvements to home page

--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -79,9 +79,9 @@
                     </div>
                     <div id="upload-files">    
                         <h3>Add a new document to the forums</h3>
-                        <button type="submit" class="button">
-                            <i class="fa fa-plus"></i>   UPLOAD
-                        </button>
+                        <center><button type="submit" class="button">
+                            +  UPLOAD
+                        </button></center>
                     </div>
                 </div>
         
