--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -2,6 +2,7 @@
     <head>
         <title>Login-RADForums</title>
         <link rel="stylesheet" href="logincss.css">
+        <link rel="icon" href="../images/logotitle.png" type="image/x-icon">
     </head>
     <body>
         <div class="container">
