--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -2,6 +2,7 @@
     <head>
         <title>Sign Up-RADForums</title>
         <script src="https://kit.fontawesome.com/6d93c457af.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="../images/logotitle.png" type="image/x-icon">
         <link rel="stylesheet" href="signup.css">
     </head>
     <body>
