--- a/Subject Page/subject-page.html
+++ b/Subject Page/subject-page.html
@@ -11,16 +11,16 @@
     <body>
         <div id="homepage">
             <div id="toppage">
-                <img id="logo" src="logo2.png">
+                <img id="logo" src="../images/logo2.png">
                 <div id="navbar">
                     <ul>
                         <li class="nav-op"><a>SUBJECT</a>
                             <ul>
                                 <li><a href="subject-page.html">UE18CS205</a></li>
-                                <li><a>SUBJECT 2</a></li>
-                                <li><a>SUBJECT 3</a></li>
-                                <li><a>SUBJECT 4</a></li>
-                                <li><a>SUBJECT 5</a></li>
+                                <li><a>UE18CS204</a></li>
+                                <li><a>UE18CS203</a></li>
+                                <li><a>UE18CS202</a></li>
+                                <li><a>UE18CS201</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>ACTIVITY</a>
@@ -56,7 +56,8 @@
                             <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               <span class="sr-only">Toggle Dropdown</span>
                             </button>
-                            <div class="dropdown-menu">                                      <a class="dropdown-item" href="#">My Profile</a>
+                            <div class="dropdown-menu">                                      
+                              <a class="dropdown-item" href="#">My Profile</a>
                               <a class="dropdown-item" href="#">Followed Content</a>
                               <a class="dropdown-item" href="#">Settings</a>
                               <div class="dropdown-divider"></div>
@@ -83,17 +84,17 @@
                         <p>ASSIGNMENT WEEK:</p>
                     </div>
                     <div class="thread uploads">
-                        <h3>LATEST THREADS ON UE18CS205</h3>
+                        <h3>LATEST UPLOADS IN UE18CS205</h3>
                         <div class="upload-container">
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General Thread
+                                    
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">What are the grading criteria for the DML Assignment?</h5>
+                                    <h5 class="card-title">Unit 2-Sets, Relations and Functions</h5>
                                     <p class="card-text" style="float:right">23 minutes ago</p>
                                     <p class="card-text">Uploaded By: Rakshith Jayanth</p>
-                                    <a href="#" class="btn btn-primary">View Thread</a>
+                                    <a href="../file page/filepage.html" class="btn btn-primary">View File</a>
                                 </div>
                             </div>
                             <div class="card">
