Temporary Commit to retain changes

--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -17,23 +17,23 @@
                         <ul>
                             <li class="nav-op"><a>SUBJECT</a>
                                 <ul>
-                                    <li><a href="../Subject Page/subject-page.html">UE18CS205</a></li>
-                                    <li><a>UE18CS204</a></li>
-                                    <li><a>UE18CS203</a></li>
-                                    <li><a>UE18CS202</a></li>
-                                    <li><a>UE18CS201</a></li>
+                                        <li><a href="../Subject Page/01.html">UE18CS205</a></li>
+                                        <li><a href="../Subject Page/02.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/03.html">UE18CS203</a></li>
+                                        <li><a href="../Subject Page/04.html">UE18CS202</a></li>
+                                        <li><a href="../Subject Page/05.html">UE18CS201</a></li>
                                 </ul>
                             </li>
                             <li class="nav-op"><a>ACTIVITY</a>
                                 <ul>
                                     <li><a>CALENDAR</a></li>
                                     <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
-                                    <li><a>MY ACTIVITY</a></li>
+                                    <li><a href="../activity_page.html">MY ACTIVITY</a></li>
                                 </ul>
                             </li>
                             <li class="nav-op"><a>MORE</a>
                                 <ul>
-                                    <li><a>CONTACT US</a></li>
+                                    <li><a href="../About Us/aboutus.html">ABOUT US</a></li>
                                     <li><a>REPORT A BUG</a></li>
                                     <li><a>FEEDBACK FORM</a></li>
                                 </ul>
@@ -58,7 +58,7 @@
                                     <span class="sr-only">Toggle Dropdown</span>
                                     </button>
                                     <div class="dropdown-menu">                                      
-                                    <a class="dropdown-item" href="#">My Profile</a>
+                                    <a class="dropdown-item" href="../userprofile.html">My Profile</a>
                                     <a class="dropdown-item" href="#">Followed Content</a>
                                     <a class="dropdown-item" href="#">Settings</a>
                                     <div class="dropdown-divider"></div>
