--- a/Subject Page/01.html
+++ b/Subject Page/01.html
@@ -7,6 +7,7 @@
         <!--<script src="https://kit.fontawesome.com/6d93c457af.js" crossorigin="anonymous"></script>-->
         <title>DML-RADForums</title>
         <link rel="stylesheet" href="subject-page.css">
+        <link rel="icon" href="../images/logotitle.png" type="image/x-icon">
     </head>
     <body>
         <div id="homepage">
@@ -16,18 +17,18 @@
                     <ul>
                         <li class="nav-op"><a>SUBJECT</a>
                             <ul>
-                                <li><a href="subject-page.html">UE18CS205</a></li>
-                                <li><a>UE18CS204</a></li>
-                                <li><a>UE18CS203</a></li>
-                                <li><a>UE18CS202</a></li>
-                                <li><a>UE18CS201</a></li>
+                                <li><a href="05.html">UE18CS205</a></li>
+                                <li><a href="04.html">UE18CS204</a></li>
+                                <li><a href="03.html">UE18CS203</a></li>
+                                <li><a href="02.html">UE18CS202</a></li>
+                                <li><a href="01.html">UE18CS201</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>ACTIVITY</a>
                             <ul>
                                 <li><a>CALENDAR</a></li>
                                 <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
-                                <li><a href="../activity_page.html">MY ACTIVITY</a></li>
+                                <li><a href="/activity_page.html">MY ACTIVITY</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>MORE</a>
@@ -57,7 +58,7 @@
                               <span class="sr-only">Toggle Dropdown</span>
                             </button>
                             <div class="dropdown-menu">                                      
-                              <a class="dropdown-item" href="../userprofile.html">My Profile</a>
+                              <a class="dropdown-item"  href="/userprofile.html">My Profile</a>
                               <a class="dropdown-item" href="#">Followed Content</a>
                               <a class="dropdown-item" href="#">Settings</a>
                               <div class="dropdown-divider"></div>
@@ -73,7 +74,7 @@
                     </a>
                 </div>
             </div>
-            <h1>Discrete Mathematics and Logic</h1>
+            <h1>Digital Design and Computer Organisation</h1>
             <div class="container">
                 <div class="left-container">
                     <div id="info-block">
@@ -84,33 +85,28 @@
                         <p>ASSIGNMENT WEEK:</p>
                     </div>
                     <div class="thread uploads">
-                        <h3>LATEST UPLOADS IN UE18CS205</h3>
+                        <h3>LATEST UPLOADS IN UE18CS201</h3>
                         <div class="upload-container">
                             <div class="card">
                                 <div class="card-header">
                                     
                                 </div>
+                                
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    UE18CS201 General thread
+                                </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Unit 2-Sets, Relations and Functions</h5>
+                                    <h5 class="card-title">Unit 2</h5>
                                     <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Uploaded By: Rakshith Jayanth</p>
+                                    <p class="card-text">Started By: Krishna S.</p>
                                     <a href="../file page/filepage.html" class="btn btn-primary">View File</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General thread
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Can someone explain Russel's paradox</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Started By: Krishna S.</p>
-                                    <a href="#" class="btn btn-primary">View Thread</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS205 General thread
+                                    UE18CS201 General thread
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Can someone solve this problem?</h5>
@@ -121,20 +117,20 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General thread
+                                    UE18CS201 General thread
                                 </div>
                             </div>
                         </div>    
                     </div>
                     <div class="thread uploads">
-                        <h3>LATEST THREADS ON UE18CS205</h3>
+                        <h3>LATEST THREADS ON UE18CS201</h3>
                         <div class="upload-container">
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General Thread
+                                    UE18CS201 General Thread
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">What are the grading criteria for the DML Assignment?</h5>
+                                    <h5 class="card-title">What are the grading criteria for the DDCO Assignment?</h5>
                                     <p class="card-text" style="float:right">23 minutes ago</p>
                                     <p class="card-text">Uploaded By: Rakshith Jayanth</p>
                                     <a href="#" class="btn btn-primary">View Thread</a>
@@ -142,7 +138,7 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General thread
+                                    UE18CS201 General thread
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Can someone explain Russel's paradox</h5>
@@ -153,7 +149,7 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General thread
+                                    UE18CS201 General thread
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Can someone solve this problem?</h5>
@@ -164,7 +160,7 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    UE18CS205 General thread
+                                    UE18CS201 General thread
                                 </div>
                             </div>
                         </div>    
@@ -173,7 +169,7 @@
                 <div class="right-container">
                     <div id="upcoming">
                         <h3>SUBJECT DETAILS</h3>
-                        <p>COURSE CODE: UE18CS205</p>
+                        <p>COURSE CODE: UE18CS201</p>
                         <p>SEMESTER: 3</p>
                         <p>ANCHOR: ----</p>
                     </div>
