--- a/Subject Page/05.html
+++ b/Subject Page/05.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!--<script src="https://kit.fontawesome.com/6d93c457af.js" crossorigin="anonymous"></script>-->
         <title>DML-RADForums</title>
-        <link rel="stylesheet" href="subject-page.css">
+        <link rel="stylesheet" href="/Subject Page/subject-page.css">
+        <link rel="icon" href="../images/logotitle.png" type="image/x-icon">
+
     </head>
     <body>
         <div id="homepage">
@@ -16,18 +18,18 @@
                     <ul>
                         <li class="nav-op"><a>SUBJECT</a>
                             <ul>
-                                <li><a href="subject-page.html">UE18CS205</a></li>
-                                <li><a>UE18CS204</a></li>
-                                <li><a>UE18CS203</a></li>
-                                <li><a>UE18CS202</a></li>
-                                <li><a>UE18CS201</a></li>
+                                <li><a href="01.html">UE18CS205</a></li>
+                                <li><a href="02.html">UE18CS204</a></li>
+                                <li><a href="03.html">UE18CS203</a></li>
+                                <li><a href="04.html">UE18CS202</a></li>
+                                <li><a href="05.html">UE18CS201</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>ACTIVITY</a>
                             <ul>
                                 <li><a>CALENDAR</a></li>
                                 <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
-                                <li><a href="../activity_page.html">MY ACTIVITY</a></li>
+                                <li><a href="/activity_page.html">MY ACTIVITY</a></li>
                             </ul>
                         </li>
                         <li class="nav-op"><a>MORE</a>
@@ -57,7 +59,7 @@
                               <span class="sr-only">Toggle Dropdown</span>
                             </button>
                             <div class="dropdown-menu">                                      
-                              <a class="dropdown-item" href="../userprofile.html">My Profile</a>
+                              <a class="dropdown-item" href="/userprofile.html">My Profile</a>
                               <a class="dropdown-item" href="#">Followed Content</a>
                               <a class="dropdown-item" href="#">Settings</a>
                               <div class="dropdown-divider"></div>
@@ -90,12 +92,7 @@
                                 <div class="card-header">
                                     
                                 </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Unit 2-Sets, Relations and Functions</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Uploaded By: Rakshith Jayanth</p>
-                                    <a href="../file page/filepage.html" class="btn btn-primary">View File</a>
-                                </div>
+                                
                             </div>
                             <div class="card">
                                 <div class="card-header">
