--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -12,16 +12,18 @@
         <div id="opacity">
             <div id="homepage">
                 <div id="toppage">
-                    <img id="logo" src="../images/logo2.png">
+                    <a href="../Home Page/homepage2.html">
+                        <img id="logo" src="../images/logo2.png">
+                    </a>
                     <div id="navbar">
                         <ul>
                             <li class="nav-op"><a>SUBJECT</a>
                                 <ul>
-                                        <li><a href="../Subject Page/01.html">UE18CS205</a></li>
-                                        <li><a href="../Subject Page/02.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/01.html">UE18CS201</a></li>
+                                        <li><a href="../Subject Page/02.html">UE18CS202</a></li>
                                         <li><a href="../Subject Page/03.html">UE18CS203</a></li>
-                                        <li><a href="../Subject Page/04.html">UE18CS202</a></li>
-                                        <li><a href="../Subject Page/05.html">UE18CS201</a></li>
+                                        <li><a href="../Subject Page/04.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/05.html">UE18CS205</a></li>
                                 </ul>
                             </li>
                             <li class="nav-op"><a>ACTIVITY</a>
@@ -81,51 +83,23 @@
                         </div>
                         <div id="upload-files">    
                             <h3>Add a new document to the forums</h3>
-                            <center><button type="submit" class="button">
-                                +  UPLOAD
-                            </button></center>
+                            <center>
+                                <select size="1" id="upload-sub" name="subject">
+                                    <option value="2020">UE18CS201</option>
+                                    <option value="2021">UE18CS202</option>
+                                    <option value="2022">UE18CS203</option>
+                                    <option value="2023">UE18CS204</option>
+                                    <option value="2023">UE18CS205</option>        
+                                </select>
+                                <progress value="0" max="100" id="uploader">0%</progress>
+                                <input type="file" style="margin:10px 50px"  value="upload" id="fileButton" />
+                            </center>
                         </div>
                     </div>
             
                     <div id="rec-upload">
                         <h3>RECENTLY UPLOADED FILES</h3>
-                        <div class="upload-container">
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS204 Web Technology
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Unit 4 Notes</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Uploaded By: Rakshith Jayanth</p>
-                                    <a href="#" class="btn btn-primary">View File</a>
-                                    <a href="#" class="btn btn-primary">Download</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    UE18CS201 Digital Design and Computer Architecture
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Digital Design and Computer Architecture By Morris</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">Uploaded By: Krishna S.</p>
-                                    <a href="#" class="btn btn-primary">View File</a>
-                                    <a href="#" class="btn btn-primary">Download</a>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    DDCO Unit 3 Notes
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Special title treatment</h5>
-                                    <p class="card-text" style="float:right">23 minutes ago</p>
-                                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                    <a href="#" class="btn btn-primary">View File</a>
-                                    <a href="#" class="btn btn-primary">Download</a>
-                                </div>
-                            </div>    
+                        <div class="upload-container" id="upload-container">    
                         </div>
                     </div>
                 </div>
@@ -207,6 +181,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-storage.js"></script>
 
         <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -231,7 +206,7 @@
             //make auth and firestore references
             const auth=firebase.auth();
             const db=firebase.firestore();
-
+            const storage=firebase.storage();
         </script>
         <script src="home-auth.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
