--- a/file page/filepage.html
+++ b/file page/filepage.html
@@ -18,16 +18,18 @@
         <div id="opacity">
             <div id="homepage">
                 <div id="toppage">
-                    <img id="logo" src="../images/logo2.png">
+                    <a href="../Home Page/homepage2.html">
+                        <img id="logo" src="../images/logo2.png">
+                    </a>
                     <div id="navbar">
                         <ul>
                             <li class="nav-op"><a>SUBJECT</a>
                                 <ul>
-                                        <li><a href="../Subject Page/01.html">UE18CS205</a></li>
-                                        <li><a href="../Subject Page/02.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/01.html">UE18CS201</a></li>
+                                        <li><a href="../Subject Page/02.html">UE18CS202</a></li>
                                         <li><a href="../Subject Page/03.html">UE18CS203</a></li>
-                                        <li><a href="../Subject Page/04.html">UE18CS202</a></li>
-                                        <li><a href="../Subject Page/05.html">UE18CS201</a></li>                                
+                                        <li><a href="../Subject Page/04.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/05.html">UE18CS205</a></li>                                
                                 </ul>
                             </li>
                             <li class="nav-op"><a>ACTIVITY</a>
