--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -28,7 +28,7 @@
                             </li>
                             <li class="nav-op"><a>ACTIVITY</a>
                                 <ul>
-                                    <li><a>CALENDAR</a></li>
+                                    <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
                                     <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
                                     <li><a href="../activity_page.html">MY ACTIVITY</a></li>
                                 </ul>
@@ -97,11 +97,46 @@
                         </div>
                     </div>
             
-                    <div id="rec-upload">
-                        <h3>RECENTLY UPLOADED FILES</h3>
-                        <div class="upload-container" id="upload-container">    
-                        </div>
-                    </div>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-100" src="image1c.jpg" alt="First slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>All the resources you'll ever need</h5>
+                                        <p>Filtered by subjected and curated just for you</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="image3c.jpg" alt="Second slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>Interact with the community</h5>
+                                        <p>Gets your doubts intantly clarified</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="image2c.jpg" alt="Third slide">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>Become the most popular user</h5>
+                                        <p>Upload material to gain upvotes and climb up the ladder of democracy</p>
+                                </div>
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
+
+
                 </div>
                 <div id="row-2">
                     <div id="popular">
