Switched to php, hosting support, loading screen

--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -88,7 +88,7 @@
                     </form>
                     <!--<i class="fa fa-user"></i>
                     <i class="fa fa-lock"></i>-->
-                    <p>Already have an account? <a href="../Login Page/login.html">Sign In</a></p>
+                    <p>Already have an account? <a href="../index.php">Sign In</a></p>
                 </div>
             </div>
         </div>
