Added password checks
Password should be longer than 5 characters
Password should match repeated password
ddttern check for SRN

--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="textbox">
                                 <i class="fas fa-id-card"></i>
-                                <input type="SRN" id="srn" placeholder="SRN" required />
+                                <input type="SRN" id="srn" placeholder="SRN" pattern="PES[A-Za-z0-9]{2}[0-9]{8}"required />
                                 <span class="tick"></span>        
                             </div>
                         </fieldset>
