--- a/Home Page/homepage2.html
+++ b/Home Page/homepage2.html
@@ -8,12 +8,78 @@
         <link rel="stylesheet" href="homepage2.css">
         <link rel="icon" href="../images/logotitle.png" type="image/x-icon">
     </head>
-    <?php require('../templates/header.php'); ?>
-        <div id="row-1">
+    <body>
+        <div id="opacity">
+            <div id="homepage">
+                <div id="toppage">
+                    <a href="../Home Page/homepage2.html">
+                        <img id="logo" src="../images/logo2.png">
+                    </a>
+                    <div id="navbar">
+                        <ul>
+                            <li class="nav-op"><a>SUBJECT</a>
+                                <ul>
+                                        <li><a href="../Subject Page/01.html">UE18CS201</a></li>
+                                        <li><a href="../Subject Page/02.html">UE18CS202</a></li>
+                                        <li><a href="../Subject Page/03.html">UE18CS203</a></li>
+                                        <li><a href="../Subject Page/04.html">UE18CS204</a></li>
+                                        <li><a href="../Subject Page/05.html">UE18CS205</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-op"><a>ACTIVITY</a>
+                                <ul>
+                                    <li><a href="../Calendar/calendar.html">CALENDAR</a></li>
+                                    <li><a href="../Group Info/groupinfo.html">GROUP INFO</a></li>
+                                    <li><a href="../activity_page.html">MY ACTIVITY</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-op"><a>MORE</a>
+                                <ul>
+                                    <li><a href="../About Us/aboutus.html">ABOUT US</a></li>
+                                    <li><a>REPORT A BUG</a></li>
+                                    <li><a>FEEDBACK FORM</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-op"><a>OTHER FORUMS</a>
+                                <ul>
+                                    <li><a>GD FORUMS</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="user-bar">
+                        <div class="user">
+                            <div id="profile-pic">
+                                <img src="" id="picture">
+                            </div>
+                            <div id="username">
+                                <div class="btn-group">
+                                    <button type="button" id="sb-user" class="btn btn-primary">Username</button>
+                                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="sr-only">Toggle Dropdown</span>
+                                    </button>
+                                    <div class="dropdown-menu">                                      
+                                    <a class="dropdown-item" href="../userprofile.html">My Profile</a>
+                                    <a class="dropdown-item" href="#">Followed Content</a>
+                                    <a class="dropdown-item" href="#">Settings</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" id="logout" href="#">Logout</a>
+                                    </div>
+                                </div>
+                            </div>            
+                        </div>
+                        <div id="search-bar">
+                            <input class="search-txt" type="text" name="" placeholder="Type to search">
+                            <a class="search-btn" href="#">
+                                <i class="fa fa-search"></i>
+                            </a>
+                        </div>
+                    </div>
+                <div id="row-1">
                     <div id="r1-col-2">
                         <div id="upcom-events">
                             <h3>Upcoming events</h3>
-                            <h5>ISA-2 review results coming up...</h5>
                         </div>
                         <div id="upload-files">    
                             <h3>Add a new document to the forums</h3>
@@ -75,10 +141,6 @@
                 <div id="row-2">
                     <div id="popular">
                         <h4>Popular contributors of the week</h4>
-                        <br><br>
-                        <h5><center>Krishna S</center></h5>
-                        <h5><center>Danish Ebadulla</center></h5>
-                        <h5><center>Rakshith Jayanth</center></h5>
                     </div>
                     <div id="gd-upload">
                         <h3>LATEST GENERAL DISCUSSION THREADS</h3>
@@ -127,27 +189,64 @@
                         <h4>FORUM STATISTICS</h4>
                         <div id="total-user">
                             <h4>Total users</h4>
-                            <br>
-                            <h5><center>8</center></h5>
                         </div>
                         <div id="total-post">
                             <h4>Total posts</h4>
-                            <br>
-                            <h5><center>10</center></h5>
                         </div>
                     </div>
                     <div id="online-users">
                         <h4>Users online in the past 24 hours</h4>
-                        <h6>krishnas2k@gmail.com</h6>
-                        <h6>RAKSHITH</h6>
-                        <h6>Dark Wolf</h6>
-                        <h6>Jakanj</h6>
                     </div>
                 </div>
-        <?php require('../templates/footer.php'); ?>
-        <script src="home-auth.js"></script>
+                <div id="bottompage">
+                    <p>Switch theme:</p>
+                    <div class="redirects" id="icons">
+                        <a href=""><i class="fa fa-facebook-f fa-2x"></i></a>
+                        <a href=""><i class="fa fa-github fa-2x"></i></a>
+                        <a href=""><i class="fa fa-envelope fa-2x"></i></a>
+                    </div>
+                    <div class="redirects" id="tc">
+                        <a href="">Terms & Conditions</a>
+                        <a href="">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+               <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-storage.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
+                    
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: "AIzaSyCQ2E0UUN0VHrsDRsIkRa7b5dnsomqaxWg",
+                authDomain: "radforums-420ez.firebaseapp.com",
+                databaseURL: "https://radforums-420ez.firebaseio.com",
+                projectId: "radforums-420ez",
+                storageBucket: "radforums-420ez.appspot.com",
+                messagingSenderId: "308327911724",
+                appId: "1:308327911724:web:4c2c2ca9a2b2574a985c89",
+                measurementId: "G-WDQMS6T904"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+
+            //make auth and firestore references
+            const auth=firebase.auth();
+            const db=firebase.firestore();
+            const storage=firebase.storage();
+        </script>
+       
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="home-auth.js"></script>
     </body>
 </html>
